adapt to lavender

--- a/community_devices.yml
+++ b/community_devices.yml
@@ -1,7 +1,7 @@
 # This file has been generated automatically by droidian-new-device
 
-# xiaomi onclite
-xiaomi_onclite:
+# xiaomi lavender
+xiaomi_lavender:
   type: image
   arch: arm64
   edition: phosh
@@ -10,6 +10,5 @@ xiaomi_onclite:
   use_internal_repository: false
 
   packages:
-    - adaptation-droidian-onclite
-    - adaptation-onclite-configs
-    - yad
+    - adaptation-droidian-lavender
+    - adaptation-lavender-configs
