add droidian-sysfs-torch to fix torch from phosh

--- a/community_devices.yml
+++ b/community_devices.yml
@@ -12,4 +12,5 @@ xiaomi_lavender:
   packages:
     - adaptation-droidian-lavender
     - adaptation-lavender-configs
+    - droidian-sysfs-torch
     - qtwayland5
