add kernel packaging and headers

--- a/community_devices.yml
+++ b/community_devices.yml
@@ -13,4 +13,10 @@ samsung_starqlte:
     - adaptation-droidian-starqlte
     - adaptation-starqlte-configs
     - droidian-sysfs-torch
+    - linux-bootimage-4.9.186-samsung-starqlte
+    - linux-bootimage-samsung-starqlte
+    - linux-headers-4.9.186-samsung-starqlte
+    - linux-headers-samsung-starqlte
+    - linux-image-4.9.186-samsung-starqlte
+    - linux-image-samsung-starqlte
     - qtwayland5
